# Rust-Api-Hexagonal-Architecture

./: Cargo.toml  Dockerfile  README.md  Test get_user::tests Coverage Results.lcov  docker-compose.yml  sqlx-data.json
.github/: testDb.yaml
.github/workflows/: docker-publish.yml  publish.yaml  publish.yml  pushImageERC  pushImageERC.yml  testDb.yaml
src/: lib.rs  main.rs
src/api/: health.rs  mod.rs
src/api/user/: create_user.rs  delete_user.rs  get_user.rs  list_users.rs  mod.rs  update_user.rs
src/config/: config.rs
src/domain/: create_user.rs  delete_user.rs  entities.rs  get_user.rs  list_users.rs  mod.rs  update_user.rs
src/repository/: user.rs
src/telemetry/: mod.rs  telemetry_client.rs
