[package]
name = "hexa-sql-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sqlx = { features = ["postgres", "offline", "runtime-async-std-native-tls", "chrono"] }
anyhow = "1.0"
chrono="0.4.19"
async-std = { version = "1.8.0", features = [ "attributes"] }
futures = "0.3"